--- a/package.json
+++ b/package.json
@@ -6,117 +6,120 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "tauri": "tauri",
-    "prepare": "husky install",
-    "semantic-release": "semantic-release"
+      "dev": "vite",
+      "build": "vite build",
+      "preview": "vite preview",
+      "check": "svelte-check --tsconfig ./tsconfig.json",
+      "tauri": "tauri",
+      "prepare": "husky install",
+      "semantic-release": "semantic-release"
   },
   "dependencies": {
-    "@codemirror/lang-html": "^6.4.7",
-    "@codemirror/lang-javascript": "^6.2.1",
-    "@codemirror/lang-json": "^6.0.1",
-    "@codemirror/lang-xml": "^6.0.2",
-    "@codemirror/language": "^6.10.0",
-    "@codemirror/state": "^6.4.0",
-    "@lezer/highlight": "^1.2.0",
-    "@tauri-apps/api": "^1.4.0",
-    "@tauri-apps/cli": "^1.5.1",
-    "axios": "^1.5.1",
-    "body-scroll-lock": "^4.0.0-beta.0",
-    "bootstrap": "^5.3.1",
-    "btoa": "^1.2.1",
-    "codemirror": "^6.0.1",
-    "codemirror-json-schema": "^0.6.1",
-    "font-awesome": "^4.7.0",
-    "js-yaml": "^4.1.0",
-    "jsoneditor": "^9.10.3",
-    "mixpanel-browser": "^2.48.1",
-    "monaco-editor": "^0.44.0",
-    "path": "^0.12.7",
-    "rxdb": "^14.17.1",
-    "rxjs": "^7.8.1",
-    "svelte-agnostic-draggable": "^0.2.0",
-    "svelte-file-dropzone": "^2.0.2",
-    "svelte-jsoneditor": "^0.18.9",
-    "svelte-motion": "^0.11.5",
-    "svelte-navigator": "^3.2.2",
-    "svelte-sortablejs": "^0.2.0",
-    "svelte-split-pane": "^0.1.2",
-    "svelte-splitpanes": "^0.8.0",
-    "svelte-toasts": "^1.1.2",
-    "uuid": "^9.0.1",
-    "yup": "^1.2.0"
+      "@tauri-apps/api": "^1.4.0",
+      "@tauri-apps/cli": "^1.5.1",
+      "axios": "^1.5.1",
+      "body-scroll-lock": "^4.0.0-beta.0",
+      "bootstrap": "^5.3.1",
+      "btoa": "^1.2.1",
+      "font-awesome": "^4.7.0",
+      "js-yaml": "^4.1.0",
+      "jsoneditor": "^9.10.3",
+      "mixpanel-browser": "^2.48.1",
+      "monaco-editor": "^0.44.0",
+      "path": "^0.12.7",
+      "rxdb": "^14.17.1",
+      "rxjs": "^7.8.1",
+      "svelte-agnostic-draggable": "^0.2.0",
+      "svelte-file-dropzone": "^2.0.2",
+      "svelte-jsoneditor": "^0.18.9",
+      "svelte-motion": "^0.11.5",
+      "svelte-navigator": "^3.2.2",
+      "svelte-sortablejs": "^0.2.0",
+      "svelte-split-pane": "^0.1.2",
+      "svelte-splitpanes": "^0.8.0",
+      "svelte-toasts": "^1.1.2",
+      "uuid": "^9.0.1",
+      "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/exec": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/release-notes-generator": "^12.1.0",
-    "@sveltejs/vite-plugin-svelte": "^2.4.2",
-    "@tsconfig/svelte": "^5.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
-    "eslint": "^8.54.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.0",
-    "node-sass": "^9.0.0",
-    "prettier": "3.0.2",
-    "sass": "^1.66.0",
-    "semantic-release": "^23.0.0",
-    "svelte": "^4.0.5",
-    "svelte-check": "^3.4.6",
-    "svelte-loading-spinners": "^0.3.4",
-    "svelte-preprocess": "^5.0.4",
-    "tslib": "^2.6.0",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.4"
+      "@semantic-release/changelog": "^6.0.3",
+      "@semantic-release/exec": "^6.0.3",
+      "@semantic-release/git": "^10.0.1",
+      "@semantic-release/release-notes-generator": "^12.1.0",
+      "@sveltejs/vite-plugin-svelte": "^2.4.2",
+      "@tsconfig/svelte": "^5.0.0",
+      "@typescript-eslint/eslint-plugin": "^6.4.0",
+      "@typescript-eslint/parser": "^6.4.0",
+      "eslint": "^8.54.0",
+      "husky": "^8.0.3",
+      "lint-staged": "^14.0.0",
+      "node-sass": "^9.0.0",
+      "prettier": "3.0.2",
+      "sass": "^1.66.0",
+      "semantic-release": "^23.0.0",
+      "svelte": "^4.0.5",
+      "svelte-check": "^3.4.6",
+      "svelte-loading-spinners": "^0.3.4",
+      "svelte-preprocess": "^5.0.4",
+      "tslib": "^2.6.0",
+      "typescript": "^5.0.2",
+      "vite": "^4.4.4"
   },
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+      "**/*": "prettier --write --ignore-unknown"
   },
-  "repository": "https://github.com/sparrowapp-dev/sparrow-app.git",
+  "repository": "https://github.com/pratikshinde590/sparrow-app.git",
   "release": {
-    "branches": [
-      "main"
-    ],
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/changelog",
-      "@semantic-release/exec",
-      "@semantic-release/npm",
-      [
-        "@semantic-release/git",
-        {
-          "assets": [
-            "CHANGELOG.md",
-            "package.json"
-          ],
-          "message": "chore(release): ${nextRelease.version} [skip ci]"
-        }
+      "branches": [
+          "main"
       ],
-      [
-        "@semantic-release/github",
-        {
-          "assets": [
-            {
-              "path": "D:/a/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/msi/sparrow-app_1.0.0_x64.dmg",
-              "label": "sparrow.dmg"
-            },
-            {
-              "path": "D:/a/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/nsis/*.exe",
-              "label": "sparrow.exe"
-            },
-            {
-              "path": "D:/a/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/msi/*.msi",
-              "label": "sparrow.msi"
-            }
+      "plugins": [
+          "@semantic-release/commit-analyzer",
+          "@semantic-release/release-notes-generator",
+          "@semantic-release/changelog",
+          "@semantic-release/exec",
+          "@semantic-release/npm",
+          [
+              "@semantic-release/git",
+              {
+                  "assets": [
+                      "CHANGELOG.md",
+                      "package.json"
+                  ],
+                  "message": "chore(release): ${nextRelease.version} [skip ci]"
+              }
+          ],
+          [
+              "@semantic-release/github",
+              {
+                  "assets": [
+                      {
+                          "path": "D:/a/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/msi/sparrow-app_1.0.0_x64.dmg",
+                          "label": "sparrow.dmg"
+                      },
+                      {
+                          "path": "D:/a/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/nsis/*.exe",
+                          "label": "sparrow.exe"
+                      },
+                      {
+                          "path": "D:/a/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/msi/*.msi",
+                          "label": "sparrow.msi"
+                      },
+                      {
+                          "path": "D:/a/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/msi/sparrow-app_1.0.0_x64_en-US.msi.zip",
+                          "label": "sparrow-app_1.0.0_x64_en-US.msi.zip"
+                      },
+                      {
+                          "path": "D:/a/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/nsis/sparrow-app_1.0.0_x64-setup.nsis.zip",
+                          "label": "sparrow-app_1.0.0_x64-setup.nsis.zip"
+                      },
+                      {
+                          "path": "D:/a/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/msi/sparrow-app.app.tar.gz",
+                          "label": "sparrow-app.app.tar.gz"
+                      }
+                  ]
+              }
           ]
-        }
       ]
-    ]
   }
 }
