--- a/.github/workflows/pr-release.yaml
+++ b/.github/workflows/pr-release.yaml
@@ -2,6 +2,7 @@ name: App Center Release
 
 on:
   pull_request:
+    types: [opened, reopened, edited]
     branches:
       - feat/onboarding-v2
 
@@ -66,11 +67,17 @@ jobs:
           npm install -g appcenter-cli@latest
       - name: Log in to App Center
         run: appcenter login --token ${{ secrets.APPCENTER_API_TOKEN }}
+
+      - name: Get PR Branch Name
+        id: pr_branch
+        run: echo "::set-output name=branch::$(echo ${{ github.head_ref }})"
       
       - name: Upload to App Center
         run: |
           appcenter login --token ${{ secrets.APPCENTER_API_TOKEN }}
-          appcenter distribute release -f D:\a\sparrow-app\sparrow-app\src-tauri\target\debug\bundle\msi\sparrow-app_0.0.0_x64_en-US.msi -g Collaborators --app techdome/Sparrow --build-version v11.23.${{ github.run_number }}
+          branch_name="${{ steps.pr_branch.outputs.branch }}"
+          echo "Branch Name: $branch_name"
+          appcenter distribute release -f D:\a\sparrow-app\sparrow-app\src-tauri\target\debug\bundle\msi\sparrow-app_0.0.0_x64_en-US.msi -g Collaborators --app techdome/Sparrow --build-version branch-${branch_name} --build-number ${{ github.run_number }}
       - name: status check and upload
         uses: neonidian/teams-notify-build-status@v3
         if: always()
@@ -118,10 +125,17 @@ jobs:
       - name: Install App Center CLI
         run: |
           npm install -g appcenter-cli@latest
+
+      - name: Get PR Branch Name
+        id: pr_branch
+        run: echo "::set-output name=branch::$(echo ${{ github.head_ref }})"
+
       - name: Upload to App Center
         run: |
           appcenter login --token ${{ secrets.APPCENTER_API_TOKEN }}
-          appcenter distribute release -f /Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/dmg/sparrow-app_0.0.0_x64.dmg -g Collaborators --app techdome/Sparrow-1 --build-version v12.23.${{ github.run_number }} --build-number ${{ github.run_number }}
+          branch_name="${{ steps.pr_branch.outputs.branch }}"
+          echo "Branch Name: $branch_name"
+          appcenter distribute release -f /Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/dmg/sparrow-app_0.0.0_x64.dmg -g Collaborators --app techdome/Sparrow-1 --build-version branch-${branch_name} --build-number ${{ github.run_number }}
       - name: status check and upload
         uses: neonidian/teams-notify-build-status@v3
         if: always()
