--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,6 +27,8 @@ tokio-util = { version = "0.6", features = ["full"] }
 tauri-plugin-os = "2.0.0-beta.0"
 tauri-plugin-updater = "2.0.0-beta"
 tauri-plugin-process = "2.0.0-beta"
+[target.'cfg(target_os = "windows")'.dependencies]
+winreg = "0.52.0"
 [target.'cfg(target_os = "macos")'.dependencies]
 objc = "0.2"
 
