--- a/.github/workflows/pr-release.yaml
+++ b/.github/workflows/pr-release.yaml
@@ -1,7 +1,7 @@
 name: App Center Release
 
 on:
-  pull_request:
+  pull_request_target:
     types: [opened, reopened, edited]
     branches:
       - feat/onboarding-v2
