--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,7 @@ tauri-plugin-os = "2.0.0-beta.0"
 tauri-plugin-updater = "2.0.0-beta"
 tauri-plugin-process = "2.0.0-beta"
 tauri-plugin-single-instance = "2.0.0-beta.2"
+tauri-plugin-shell = "2.0.0-beta.1"
 [target.'cfg(target_os = "macos")'.dependencies]
 objc = "0.2"
 
