--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tauri-apps/plugin-deep-link": "^2.0.0-beta.0",
     "@tauri-apps/plugin-os": "^2.0.0-beta.0",
     "@tauri-apps/plugin-process": "^2.0.0-beta.0",
+    "@tauri-apps/plugin-shell": "^2.0.0-beta.1",
     "@tauri-apps/plugin-updater": "^2.0.0-beta.0",
     "@tauri-apps/plugin-window": "^2.0.0-alpha.1",
     "axios": "^1.5.1",
