--- a/.github/workflows/pr-release.yaml
+++ b/.github/workflows/pr-release.yaml
@@ -10,6 +10,8 @@ env:
     VITE_MIX_PANEL_TOKEN: ${{ secrets.VITE_MIX_PANEL_TOKEN }}
     VITE_ENABLE_MIX_PANEL: ${{ secrets.VITE_ENABLE_MIX_PANEL }}
     VITE_API_TIMEOUT: ${{ secrets.VITE_API_TIMEOUT }}
+    VITE_SPARROW_SUPPORT_EMAIL: ${{ secrets.VITE_SPARROW_SUPPORT_EMAIL }}
+    VITE_AUTH_URL: ${{ secrets.VITE_AUTH_URL }}
 
 jobs:
   release_win:
