--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -1,15 +1,18 @@
-name: App Center-Release
+name: Development release
 
 on:
-  push:
-    branches:
-      - feat/onboarding-v2
+    pull_request:
+      branches:
+        - development
+      types: [opened, synchronize]
 
 env: 
     VITE_API_URL: ${{ secrets.VITE_API_URL_DEV }}
     VITE_MIX_PANEL_TOKEN: ${{ secrets.VITE_MIX_PANEL_TOKEN }}
     VITE_ENABLE_MIX_PANEL: ${{ secrets.VITE_ENABLE_MIX_PANEL }}
     VITE_API_TIMEOUT: ${{ secrets.VITE_API_TIMEOUT }}
+    VITE_SPARROW_SUPPORT_EMAIL: ${{ secrets.VITE_SPARROW_SUPPORT_EMAIL }}
+    VITE_AUTH_URL: ${{ secrets.VITE_AUTH_URL }}
 
 jobs:
   release_win:
@@ -81,7 +84,7 @@ jobs:
           appcenter login --token ${{ secrets.APPCENTER_API_TOKEN }}
           $branch_name = "${{ steps.pr_branch.outputs.branch }}"
           echo "Branch Name: $branch_name"
-          appcenter distribute release -f D:\a\sparrow-app\sparrow-app\src-tauri\target\debug\bundle\msi\Sparrow_0.0.0_x64_en-US.msi -g Collaborators --app techdome/Sparrow --build-version "branch-$branch_name" --build-number ${{ github.run_number }}
+          appcenter distribute release -f D:\a\sparrow-app\sparrow-app\src-tauri\target\debug\bundle\msi\Sparrow_1.0.0_x64_en-US.msi -g Collaborators --app techdome/Sparrow --build-version "branch-$branch_name" --build-number ${{ github.run_number }}
       
       - name: status check and upload
         uses: neonidian/teams-notify-build-status@v3
