--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -130,6 +130,9 @@ jobs:
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
           GITHUB_TOKEN: ${{ secrets.PR_GITHUB_TOKEN }}
+      
+      - name: file content
+        run: Get-Content D:\a\sparrow-app\sparrow-app\src-tauri\target\debug\bundle\msi\Sparrow_1.0.0_x64_en-US.msi.zip.sig
 
       - name: Install App Center CLI
         run: |
