--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -132,7 +132,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.PR_GITHUB_TOKEN }}
       
       - name: file content
-        run: Get-Content D:\a\sparrow-app\sparrow-app\src-tauri\target\debug\bundle\msi\Sparrow_1.0.0_x64_en-US.msi.zip.sig
+        run: cat /Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/macos/Sparrow.app.tar.gz.sig
 
       - name: Install App Center CLI
         run: |
