--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -71,7 +71,7 @@ jobs:
         with:
           token: ${{ secrets.PR_GITHUB_TOKEN }}
           gist_id: a38bdec0a9dc3ec768b5e5cbedbced47
-          file_path: D:\a\sparrow-app\sparrow-app\src-tauri\target\debug\bundle\msi\Sparrow_0.0.0_x64_en-US.msi
+          file_path: src-tauri\target\debug\bundle\msi\Sparrow_0.0.0_x64_en-US.msi.zip
           file_type: msi file
            
       - name: Install App Center CLI
@@ -148,7 +148,7 @@ jobs:
         with:
           token: ${{ secrets.PR_GITHUB_TOKEN }}
           gist_id: a38bdec0a9dc3ec768b5e5cbedbced47
-          file_path: /Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/dmg/Sparrow_0.0.0_x64.dmg
+          file_path: src-tauri/target/debug/bundle/macos/Sparrow.app.tar.gz
           file_type: dmg file
 
       - name: Install App Center CLI
