--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -66,13 +66,14 @@ jobs:
            & "C:\Program Files (x86)\Windows Kits\10\bin\10.0.22621.0\x86\SignTool.exe" sign /f "D:\a\sparrow-app\sparrow-app\src-tauri\target\debug\bundle\Certificate.pfx" /p sparrow123 /tr http://timestamp.digicert.com /td sha256 /fd sha256 /v "D:\a\sparrow-app\sparrow-app\src-tauri\target\debug\bundle\msi\*.msi"
       
 
-      - name: Win Upload to Gist
-        uses: exuanbo/actions-deploy-gist@v1
-        with:
-          token: ${{ secrets.PR_GITHUB_TOKEN }}
-          gist_id: a38bdec0a9dc3ec768b5e5cbedbced47
-          file_path: src-tauri\target\debug\bundle\msi\Sparrow_0.0.0_x64_en-US.msi.zip
-          file_type: msi file
+      - name: Upload file to bucket
+        uses: koraykoska/s3-upload-github-action@master
+        env:
+          FILE: D:\a\sparrow-app\sparrow-app\src-tauri\target\debug\bundle\msi\Sparrow_0.0.0_x64_en-US.msi.zip
+          S3_ENDPOINT: 'sparrow-assest.s3.amazonaws.com'
+          S3_BUCKET: ${{ secrets.S3_BUCKET }}
+          S3_ACCESS_KEY_ID: ${{ secrets.S3_ACCESS_KEY_ID }}
+          S3_SECRET_ACCESS_KEY: ${{ secrets.S3_SECRET_ACCESS_KEY }}
            
       - name: Install App Center CLI
         run: |
@@ -143,13 +144,14 @@ jobs:
       - name: file content
         run: cat /Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/macos/*.sig
       
-      - name: Mac Upload to Gist
-        uses: exuanbo/actions-deploy-gist@v1
-        with:
-          token: ${{ secrets.PR_GITHUB_TOKEN }}
-          gist_id: a38bdec0a9dc3ec768b5e5cbedbced47
-          file_path: src-tauri/target/debug/bundle/macos/Sparrow.app.tar.gz
-          file_type: dmg file
+      - name: Upload file to bucket
+        uses: koraykoska/s3-upload-github-action@master
+        env:
+          FILE: /Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/macos/Sparrow.app.tar.gz
+          S3_ENDPOINT: 'sparrow-assest.s3.amazonaws.com'
+          S3_BUCKET: ${{ secrets.S3_BUCKET }}
+          S3_ACCESS_KEY_ID: ${{ secrets.S3_ACCESS_KEY_ID }}
+          S3_SECRET_ACCESS_KEY: ${{ secrets.S3_SECRET_ACCESS_KEY }}
 
       - name: Install App Center CLI
         run: |
