feat: new release[]

--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -2,8 +2,7 @@ name: Development release
 
 on:
   pull_request:
-    types:
-      - opened
+    types: [opened, edited]  
     branches:
       - development
 
