--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -1,10 +1,14 @@
 name: Development release
 
 on:
-  pull_request:
-    types: [opened, edited]  
+  push:
     branches:
       - development
+# on:
+#   pull_request:
+#     types: [opened, edited]  
+#     branches:
+#       - development
 
 env: 
     VITE_API_URL: ${{ secrets.VITE_API_URL_DEV }}
