feat: update env example [11]
Signed-off-by: Md Asif Raza <itsmdasifraza@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ VITE_ENABLE_MIX_PANEL="false"
 VITE_MIX_PANEL_TOKEN=""
 VITE_SPARROW_SUPPORT_EMAIL="support@example.dev"
 VITE_AUTH_URL="http://localhost:1421"
-VITE_SPARROW_GITHUB="https://github.com"
+VITE_SPARROW_GITHUB="https://github.com/sparrowapp-dev"
