feat: env updated []

--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -12,6 +12,7 @@ env:
     VITE_API_TIMEOUT: ${{ secrets.VITE_API_TIMEOUT }}
     VITE_SPARROW_SUPPORT_EMAIL: ${{ secrets.VITE_SPARROW_SUPPORT_EMAIL }}
     VITE_AUTH_URL: ${{ secrets.VITE_AUTH_URL_DEV }}
+    VITE_SPARROW_GITHUB: ${{ secrets.VITE_SPARROW_GITHUB }}
 
 jobs:
   release_win:
