feat: add windows download modal [11]
Signed-off-by: Md Asif Raza <itsmdasifraza@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ VITE_MIX_PANEL_TOKEN=""
 VITE_SPARROW_SUPPORT_EMAIL="support@example.dev"
 VITE_AUTH_URL="http://localhost:1421"
 VITE_SPARROW_GITHUB="https://github.com/sparrowapp-dev"
+VITE_SPARROW_DOWNLOAD_LINK="https://github.com/sparrowapp-dev/sparrow-app/releases"
