--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -8,7 +8,7 @@ on:
 env: 
     VITE_API_URL: ${{ secrets.VITE_API_URL_DEV }}
     VITE_MIX_PANEL_TOKEN: ${{ secrets.VITE_MIX_PANEL_TOKEN }}
-    VITE_ENABLE_MIX_PANEL: ${{ secrets.VITE_ENABLE_MIX_PANEL }}
+    VITE_ENABLE_MIX_PANEL: ${{ secrets.VITE_ENABLE_MIX_PANEL_DEV }}
     VITE_API_TIMEOUT: ${{ secrets.VITE_API_TIMEOUT }}
     VITE_SPARROW_SUPPORT_EMAIL: ${{ secrets.VITE_SPARROW_SUPPORT_EMAIL }}
     VITE_AUTH_URL: ${{ secrets.VITE_AUTH_URL_DEV }}
