--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sparrow-app",
-  "private": false,
+  "private": true,
   "author": "Sparrow",
   "description": "The Sparrow App is your next go to API development buddy which can help you test, debug, distribute better APIs while collaborating with your colleagues and making you a better programmer.",
   "version": "1.1.0",
